EEVEE: MTLResourceStorageModeMemoryless not available on all supported platforms #116216

Closed
opened 2023-12-15 09:27:54 +01:00 by Jeroen Bakker · 2 comments
Member

System Information
Operating system: macOS-14.2-x86_64-i386-64bit 64 Bits
Graphics card: Metal API Intel(R) UHD Graphics 630 1.2

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-15 06:05, hash: bc51f541c244
Worked: (newest version of Blender that worked as expected)

Short description of error

Metal backend uses features that are not available on all supported platforms.

Exact steps for others to reproduce the error

  • Start Blender
  • Switch to EEVEE render engine
  • Set shading mode to rendered or material
2023-12-15 09:21:04.024974+0100 Blender[1920:32821] -[MTLTextureDescriptorInternal validateWithDevice:], line 1357: error 'Texture Descriptor Validation
MTLTextureDescriptor: MTLResourceStorageModeMemoryless is not a supported storage mode on this device.
'
-[MTLTextureDescriptorInternal validateWithDevice:]:1357: failed assertion `Texture Descriptor Validation
MTLTextureDescriptor: MTLResourceStorageModeMemoryless is not a supported storage mode on this device.
'
Process 1920 stopped
* thread #1, queue = 'com.apple.main-thread', stop reason = hit program assert
    frame #4: 0x00007ff80fa84c41 Metal`MTLReportFailure.cold.1 + 41
Metal`bool MTLGetEnvCase<MTLErrorModeType>(char const*, MTLErrorModeType&, std::__1::vector<std::__1::pair<char const*, MTLErrorModeType>, std::__1::allocator<std::__1::pair<char const*, MTLErrorModeType>>> const&) (.cold.1):
->  0x7ff80fa84c41 <+0>: pushq  %rbp
    0x7ff80fa84c42 <+1>: movq   %rsp, %rbp
    0x7ff80fa84c45 <+4>: pushq  %r15
    0x7ff80fa84c47 <+6>: pushq  %r14
Target 0: (Blender) stopped.

(lldb) thread backtrace
* thread #1, queue = 'com.apple.main-thread', stop reason = hit program assert
    frame #0: 0x00007ff8054237a2 libsystem_kernel.dylib`__pthread_kill + 10
    frame #1: 0x00007ff80545bf30 libsystem_pthread.dylib`pthread_kill + 262
    frame #2: 0x00007ff80537aa49 libsystem_c.dylib`abort + 126
    frame #3: 0x00007ff805379d30 libsystem_c.dylib`__assert_rtn + 314
  * frame #4: 0x00007ff80fa84c41 Metal`MTLReportFailure.cold.1 + 41
    frame #5: 0x00007ff80fa60e15 Metal`MTLReportFailure + 513
    frame #6: 0x00007ff80fa55092 Metal`_MTLMessageContextEnd + 1293
    frame #7: 0x00007ff80f915cba Metal`-[MTLTextureDescriptorInternal validateWithDevice:] + 2632
    frame #8: 0x00007ffa19dfa37f AppleIntelKBLGraphicsMTLDriver`validateTextureDescriptor(MTLTextureDescriptor*, id<MTLBuffer>, MTLIGAccelDevice*) + 81
    frame #9: 0x00007ffa19dfcb6f AppleIntelKBLGraphicsMTLDriver`-[MTLIGAccelDevice newTextureWithDescriptor:] + 42
    frame #10: 0x000000010dd7e32f Blender`blender::gpu::MTLTexture::ensure_baked(this=0x00007ff067867c28) at mtl_texture.mm:2436:18
    frame #11: 0x000000010dd7e519 Blender`blender::gpu::MTLTexture::get_metal_handle_base(this=0x00007ff067867c28) at mtl_texture.mm:301:9
    frame #12: 0x000000010dd1bcbb Blender`blender::gpu::MTLFrameBuffer::bake_render_pass_descriptor(this=0x00007ff06b8d7808, load_contents=false) at mtl_framebuffer.mm:1614:61
    frame #13: 0x000000010dcfb3e1 Blender`blender::gpu::MTLCommandBufferManager::ensure_begin_render_command_encoder(this=0x00007ff0afc0cb00, ctx_framebuffer=0x00007ff06b8d7808, force_begin=true, r_new_pass=0x00007ff7bfefd3af) at mtl_command_buffer.mm:311:53
    frame #14: 0x000000010dd06da5 Blender`blender::gpu::MTLContext::ensure_begin_render_pass(this=0x00007ff0afc0b000) at mtl_context.mm:524:35
    frame #15: 0x000000010dcf7f31 Blender`blender::gpu::MTLBatch::bind(this=0x00007ff0983a5008, v_count=0) at mtl_batch.mm:472:42
    frame #16: 0x000000010dcf4e53 Blender`blender::gpu::MTLBatch::draw_advanced_indirect(this=0x00007ff0983a5008, indirect_buf=0x00007ff0b57e3f78, offset=0) at mtl_batch.mm:897:43
    frame #17: 0x000000010dcf476e Blender`blender::gpu::MTLBatch::draw_indirect(this=0x00007ff0983a5008, indirect_buf=0x00007ff0b57e3f78, offset=0) at mtl_batch.mm:48:9
    frame #18: 0x000000010dbd1a7d Blender`GPU_batch_draw_indirect(gpu_batch=0x00007ff0983a5010, indirect_buf=0x00007ff0b57e3f78, offset=0) at gpu_batch.cc:318:10
    frame #19: 0x00000001019f1a4f Blender`blender::draw::command::DrawIndirect::execute(this=0x00007ff0b61d2ee8, state=0x00007ff7bfefd7d0) const at draw_command.cc:166:3
    frame #20: 0x0000000101a1861a Blender`blender::draw::detail::PassBase<blender::draw::command::DrawMultiBuf>::submit(this=0x00007ff06b84d418, state=0x00007ff7bfefd7d0) const at draw_pass.hh:584:47
    frame #21: 0x0000000101a184ee Blender`blender::draw::detail::PassBase<blender::draw::command::DrawMultiBuf>::submit(this=0x00007ff067404768, state=0x00007ff7bfefd7d0) const at draw_pass.hh:560:35
    frame #22: 0x0000000101a18422 Blender`blender::draw::Manager::submit(this=0x00007ff0b57c1190, pass=0x00007ff067404768, view=0x00007ff0674059e8) at draw_manager.cc:201:8
    frame #23: 0x0000000101b19dab Blender`blender::eevee::ShadowPipeline::render(this=0x00007ff067404760, view=0x00007ff0674059e8) at eevee_pipeline.cc:226:18
    frame #24: 0x0000000101b4fa75 Blender`blender::eevee::ShadowModule::set_view(this=0x00007ff067404ce0, view=0x00007ff0676129c0, depth_tx=0x00007ff06c80c188) at eevee_shadow.cc:1364:30
    frame #25: 0x0000000101b1dbad Blender`blender::eevee::DeferredLayer::render(this=0x00007ff067402110, main_view=0x00007ff067612840, render_view=0x00007ff0676129c0, prepass_fb=0x00007ff0676127a0, combined_fb=0x00007ff0676127b0, gbuffer_fb=0x00007ff0676127c0, extent=blender::int2 @ 0x00007ff7bfefde18, rt_buffer=0x00007ff0676117e0, is_first_pass=true) at eevee_pipeline.cc:684:17
    frame #26: 0x0000000101b1ec02 Blender`blender::eevee::DeferredPipeline::render(this=0x00007ff067402110, main_view=0x00007ff067612840, render_view=0x00007ff0676129c0, prepass_fb=0x00007ff0676127a0, combined_fb=0x00007ff0676127b0, gbuffer_fb=0x00007ff0676127c0, extent=blender::int2 @ 0x00007ff7bfefdf28, rt_buffer_opaque_layer=0x00007ff0676117e0, rt_buffer_refract_layer=0x00007ff067611f90) at eevee_pipeline.cc:866:17
    frame #27: 0x0000000101b5ef69 Blender`blender::eevee::ShadingView::render(this=0x00007ff0676117c0) at eevee_view.cc:131:28
    frame #28: 0x0000000101ae3adf Blender`blender::eevee::MainView::render(this=0x00007ff06760b9b0) at eevee_view.hh:139:25
    frame #29: 0x0000000101ae39f9 Blender`blender::eevee::Instance::render_sample(this=0x00007ff067400000) at eevee_instance.cc:381:13
    frame #30: 0x0000000101ae6753 Blender`blender::eevee::Instance::draw_viewport(this=0x00007ff067400000, dfbl=0x00007ff0b57c10c0) at eevee_instance.cc:499:3
    frame #31: 0x0000000101ac43be Blender`eevee_draw_scene(vedata=0x00007ff0a7508468) at eevee_engine.cc:107:18
    frame #32: 0x0000000101a1e615 Blender`drw_engines_draw_scene() at draw_manager_c.cc:1117:7
    frame #33: 0x0000000101a1ccc3 Blender`DRW_draw_render_loop_ex(depsgraph=0x00007ff0a7350a08, engine_type=0x00000001107d5300, region=0x00007ff0a7f9e5e8, v3d=0x00007ff0aa948808, viewport=0x00007ff0b6199388, evil_C=0x00007ff0a6f226e8) at draw_manager_c.cc:1762:3
    frame #34: 0x0000000101a1c4c7 Blender`DRW_draw_view(C=0x00007ff0a6f226e8) at draw_manager_c.cc:1635:5
    frame #35: 0x0000000103b04496 Blender`view3d_draw_view(C=0x00007ff0a6f226e8, region=0x00007ff0a7f9e5e8) at view3d_draw.cc:1596:3
    frame #36: 0x0000000103b04340 Blender`view3d_main_region_draw(C=0x00007ff0a6f226e8, region=0x00007ff0a7f9e5e8) at view3d_draw.cc:1630:3
    frame #37: 0x000000010227c3e7 Blender`ED_region_do_draw(C=0x00007ff0a6f226e8, region=0x00007ff0a7f9e5e8) at area.cc:532:5
    frame #38: 0x0000000101561411 Blender`wm_draw_window_offscreen(C=0x00007ff0a6f226e8, win=0x00007ff0a79bcaf8, stereo=false) at wm_draw.cc:1007:9
    frame #39: 0x0000000101560994 Blender`wm_draw_window(C=0x00007ff0a6f226e8, win=0x00007ff0a79bcaf8) at wm_draw.cc:1174:3
    frame #40: 0x000000010156061b Blender`wm_draw_update(C=0x00007ff0a6f226e8) at wm_draw.cc:1572:7
    frame #41: 0x0000000101557f89 Blender`WM_main(C=0x00007ff0a6f226e8) at wm.cc:619:5
    frame #42: 0x000000010018575e Blender`main(argc=1, argv=0x00007ff7bfeff490) at creator.cc:576:5
    frame #43: 0x00007ff8050d1386 dyld`start + 1942

MTLResourceStorageModeMemoryless seems like an optimization features and could be worked around, although with some performance loss. According to documentation memory less storage mode is only supported by Apple GPUs. Workaround would be to use MTLStorageModePrivate

**System Information** Operating system: macOS-14.2-x86_64-i386-64bit 64 Bits Graphics card: Metal API Intel(R) UHD Graphics 630 1.2 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-15 06:05, hash: `bc51f541c244` Worked: (newest version of Blender that worked as expected) **Short description of error** Metal backend uses features that are not available on all supported platforms. **Exact steps for others to reproduce the error** * Start Blender * Switch to EEVEE render engine * Set shading mode to rendered or material ``` 2023-12-15 09:21:04.024974+0100 Blender[1920:32821] -[MTLTextureDescriptorInternal validateWithDevice:], line 1357: error 'Texture Descriptor Validation MTLTextureDescriptor: MTLResourceStorageModeMemoryless is not a supported storage mode on this device. ' -[MTLTextureDescriptorInternal validateWithDevice:]:1357: failed assertion `Texture Descriptor Validation MTLTextureDescriptor: MTLResourceStorageModeMemoryless is not a supported storage mode on this device. ' Process 1920 stopped * thread #1, queue = 'com.apple.main-thread', stop reason = hit program assert frame #4: 0x00007ff80fa84c41 Metal`MTLReportFailure.cold.1 + 41 Metal`bool MTLGetEnvCase<MTLErrorModeType>(char const*, MTLErrorModeType&, std::__1::vector<std::__1::pair<char const*, MTLErrorModeType>, std::__1::allocator<std::__1::pair<char const*, MTLErrorModeType>>> const&) (.cold.1): -> 0x7ff80fa84c41 <+0>: pushq %rbp 0x7ff80fa84c42 <+1>: movq %rsp, %rbp 0x7ff80fa84c45 <+4>: pushq %r15 0x7ff80fa84c47 <+6>: pushq %r14 Target 0: (Blender) stopped. (lldb) thread backtrace * thread #1, queue = 'com.apple.main-thread', stop reason = hit program assert frame #0: 0x00007ff8054237a2 libsystem_kernel.dylib`__pthread_kill + 10 frame #1: 0x00007ff80545bf30 libsystem_pthread.dylib`pthread_kill + 262 frame #2: 0x00007ff80537aa49 libsystem_c.dylib`abort + 126 frame #3: 0x00007ff805379d30 libsystem_c.dylib`__assert_rtn + 314 * frame #4: 0x00007ff80fa84c41 Metal`MTLReportFailure.cold.1 + 41 frame #5: 0x00007ff80fa60e15 Metal`MTLReportFailure + 513 frame #6: 0x00007ff80fa55092 Metal`_MTLMessageContextEnd + 1293 frame #7: 0x00007ff80f915cba Metal`-[MTLTextureDescriptorInternal validateWithDevice:] + 2632 frame #8: 0x00007ffa19dfa37f AppleIntelKBLGraphicsMTLDriver`validateTextureDescriptor(MTLTextureDescriptor*, id<MTLBuffer>, MTLIGAccelDevice*) + 81 frame #9: 0x00007ffa19dfcb6f AppleIntelKBLGraphicsMTLDriver`-[MTLIGAccelDevice newTextureWithDescriptor:] + 42 frame #10: 0x000000010dd7e32f Blender`blender::gpu::MTLTexture::ensure_baked(this=0x00007ff067867c28) at mtl_texture.mm:2436:18 frame #11: 0x000000010dd7e519 Blender`blender::gpu::MTLTexture::get_metal_handle_base(this=0x00007ff067867c28) at mtl_texture.mm:301:9 frame #12: 0x000000010dd1bcbb Blender`blender::gpu::MTLFrameBuffer::bake_render_pass_descriptor(this=0x00007ff06b8d7808, load_contents=false) at mtl_framebuffer.mm:1614:61 frame #13: 0x000000010dcfb3e1 Blender`blender::gpu::MTLCommandBufferManager::ensure_begin_render_command_encoder(this=0x00007ff0afc0cb00, ctx_framebuffer=0x00007ff06b8d7808, force_begin=true, r_new_pass=0x00007ff7bfefd3af) at mtl_command_buffer.mm:311:53 frame #14: 0x000000010dd06da5 Blender`blender::gpu::MTLContext::ensure_begin_render_pass(this=0x00007ff0afc0b000) at mtl_context.mm:524:35 frame #15: 0x000000010dcf7f31 Blender`blender::gpu::MTLBatch::bind(this=0x00007ff0983a5008, v_count=0) at mtl_batch.mm:472:42 frame #16: 0x000000010dcf4e53 Blender`blender::gpu::MTLBatch::draw_advanced_indirect(this=0x00007ff0983a5008, indirect_buf=0x00007ff0b57e3f78, offset=0) at mtl_batch.mm:897:43 frame #17: 0x000000010dcf476e Blender`blender::gpu::MTLBatch::draw_indirect(this=0x00007ff0983a5008, indirect_buf=0x00007ff0b57e3f78, offset=0) at mtl_batch.mm:48:9 frame #18: 0x000000010dbd1a7d Blender`GPU_batch_draw_indirect(gpu_batch=0x00007ff0983a5010, indirect_buf=0x00007ff0b57e3f78, offset=0) at gpu_batch.cc:318:10 frame #19: 0x00000001019f1a4f Blender`blender::draw::command::DrawIndirect::execute(this=0x00007ff0b61d2ee8, state=0x00007ff7bfefd7d0) const at draw_command.cc:166:3 frame #20: 0x0000000101a1861a Blender`blender::draw::detail::PassBase<blender::draw::command::DrawMultiBuf>::submit(this=0x00007ff06b84d418, state=0x00007ff7bfefd7d0) const at draw_pass.hh:584:47 frame #21: 0x0000000101a184ee Blender`blender::draw::detail::PassBase<blender::draw::command::DrawMultiBuf>::submit(this=0x00007ff067404768, state=0x00007ff7bfefd7d0) const at draw_pass.hh:560:35 frame #22: 0x0000000101a18422 Blender`blender::draw::Manager::submit(this=0x00007ff0b57c1190, pass=0x00007ff067404768, view=0x00007ff0674059e8) at draw_manager.cc:201:8 frame #23: 0x0000000101b19dab Blender`blender::eevee::ShadowPipeline::render(this=0x00007ff067404760, view=0x00007ff0674059e8) at eevee_pipeline.cc:226:18 frame #24: 0x0000000101b4fa75 Blender`blender::eevee::ShadowModule::set_view(this=0x00007ff067404ce0, view=0x00007ff0676129c0, depth_tx=0x00007ff06c80c188) at eevee_shadow.cc:1364:30 frame #25: 0x0000000101b1dbad Blender`blender::eevee::DeferredLayer::render(this=0x00007ff067402110, main_view=0x00007ff067612840, render_view=0x00007ff0676129c0, prepass_fb=0x00007ff0676127a0, combined_fb=0x00007ff0676127b0, gbuffer_fb=0x00007ff0676127c0, extent=blender::int2 @ 0x00007ff7bfefde18, rt_buffer=0x00007ff0676117e0, is_first_pass=true) at eevee_pipeline.cc:684:17 frame #26: 0x0000000101b1ec02 Blender`blender::eevee::DeferredPipeline::render(this=0x00007ff067402110, main_view=0x00007ff067612840, render_view=0x00007ff0676129c0, prepass_fb=0x00007ff0676127a0, combined_fb=0x00007ff0676127b0, gbuffer_fb=0x00007ff0676127c0, extent=blender::int2 @ 0x00007ff7bfefdf28, rt_buffer_opaque_layer=0x00007ff0676117e0, rt_buffer_refract_layer=0x00007ff067611f90) at eevee_pipeline.cc:866:17 frame #27: 0x0000000101b5ef69 Blender`blender::eevee::ShadingView::render(this=0x00007ff0676117c0) at eevee_view.cc:131:28 frame #28: 0x0000000101ae3adf Blender`blender::eevee::MainView::render(this=0x00007ff06760b9b0) at eevee_view.hh:139:25 frame #29: 0x0000000101ae39f9 Blender`blender::eevee::Instance::render_sample(this=0x00007ff067400000) at eevee_instance.cc:381:13 frame #30: 0x0000000101ae6753 Blender`blender::eevee::Instance::draw_viewport(this=0x00007ff067400000, dfbl=0x00007ff0b57c10c0) at eevee_instance.cc:499:3 frame #31: 0x0000000101ac43be Blender`eevee_draw_scene(vedata=0x00007ff0a7508468) at eevee_engine.cc:107:18 frame #32: 0x0000000101a1e615 Blender`drw_engines_draw_scene() at draw_manager_c.cc:1117:7 frame #33: 0x0000000101a1ccc3 Blender`DRW_draw_render_loop_ex(depsgraph=0x00007ff0a7350a08, engine_type=0x00000001107d5300, region=0x00007ff0a7f9e5e8, v3d=0x00007ff0aa948808, viewport=0x00007ff0b6199388, evil_C=0x00007ff0a6f226e8) at draw_manager_c.cc:1762:3 frame #34: 0x0000000101a1c4c7 Blender`DRW_draw_view(C=0x00007ff0a6f226e8) at draw_manager_c.cc:1635:5 frame #35: 0x0000000103b04496 Blender`view3d_draw_view(C=0x00007ff0a6f226e8, region=0x00007ff0a7f9e5e8) at view3d_draw.cc:1596:3 frame #36: 0x0000000103b04340 Blender`view3d_main_region_draw(C=0x00007ff0a6f226e8, region=0x00007ff0a7f9e5e8) at view3d_draw.cc:1630:3 frame #37: 0x000000010227c3e7 Blender`ED_region_do_draw(C=0x00007ff0a6f226e8, region=0x00007ff0a7f9e5e8) at area.cc:532:5 frame #38: 0x0000000101561411 Blender`wm_draw_window_offscreen(C=0x00007ff0a6f226e8, win=0x00007ff0a79bcaf8, stereo=false) at wm_draw.cc:1007:9 frame #39: 0x0000000101560994 Blender`wm_draw_window(C=0x00007ff0a6f226e8, win=0x00007ff0a79bcaf8) at wm_draw.cc:1174:3 frame #40: 0x000000010156061b Blender`wm_draw_update(C=0x00007ff0a6f226e8) at wm_draw.cc:1572:7 frame #41: 0x0000000101557f89 Blender`WM_main(C=0x00007ff0a6f226e8) at wm.cc:619:5 frame #42: 0x000000010018575e Blender`main(argc=1, argv=0x00007ff7bfeff490) at creator.cc:576:5 frame #43: 0x00007ff8050d1386 dyld`start + 1942 ``` `MTLResourceStorageModeMemoryless` seems like an optimization features and could be worked around, although with some performance loss. According to documentation memory less storage mode is only supported by Apple GPUs. Workaround would be to use `MTLStorageModePrivate`
Jeroen Bakker added this to the 4.1 milestone 2023-12-15 09:27:54 +01:00
Jeroen Bakker added this to the EEVEE & Viewport project 2023-12-15 09:27:58 +01:00
Jeroen Bakker changed title from EEVEE: Metal uses features that are not available on all platforms to EEVEE: MTLResourceStorageModeMemoryless not available on all supported platforms 2023-12-15 09:28:28 +01:00

Not exactly sure where a change manifested, but the memoryless flag should only be enabled for EEVEE shadow fallback if (GPU_platform_architecture() == GPU_ARCHITECTURE_TBDR);.

I think there may be a missing patch pending merge to remove this usage. It may have been part of the original shadow atomic fallback patch to allow full memoryless render-target support.

The actual offending usage of MEMORYLESS, in EEVEE Next shadows, does not need any attachments at all, just dimensions.
Will submit a fix.

Not exactly sure where a change manifested, but the memoryless flag should only be enabled for EEVEE shadow fallback if `(GPU_platform_architecture() == GPU_ARCHITECTURE_TBDR);`. I think there may be a missing patch pending merge to remove this usage. It may have been part of the original shadow atomic fallback patch to allow full memoryless render-target support. The actual offending usage of MEMORYLESS, in EEVEE Next shadows, does not need any attachments at all, just dimensions. Will submit a fix.

I should add that it should also be changed in the backend to only support this flag on tile-based systems, this is something I can look into.

I should add that it should also be changed in the backend to only support this flag on tile-based systems, this is something I can look into.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-01-12 15:08:58 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116216
No description provided.