Fix #116216: Only support Memoryless texture flag on UMA devices

Change limits MTLStorageModeMemoryless to device which
support this feature.

Authored by Apple: Michael Parkin-White