source/blender/gpu/metal/mtl_texture.mm
@@ -2344,7 +2344,9 @@ void gpu::MTLTexture::ensure_baked()
     /* Override storage mode if memoryless attachments are being used. */
     if (gpu_image_usage_flags_ & GPU_TEXTURE_USAGE_MEMORYLESS) {
       if (@available(macOS 11.00, *)) {
-        texture_descriptor_.storageMode = MTLStorageModeMemoryless;
+        if ([ctx->device hasUnifiedMemory]) {
+          texture_descriptor_.storageMode = MTLStorageModeMemoryless;
+        }
       }
       else {
         BLI_assert_msg(0, "GPU_TEXTURE_USAGE_MEMORYLESS is not available on older MacOS versions");
